Fix homepage layout: match Crace button positioning, fix locations/footer overlap, remove stray HTML tags

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ a { color: inherit; /* blue colors for links too */ text-decoration: inherit; /*
     margin-bottom: 1em;
     margin-top: 50px;
     padding-right: 90px;}
+.content-a {position: relative;width: 10px;background-color: white;margin: 0 auto;padding: 50px;margin-bottom: 1em;}
 .banner-box {background-color: red;}
  .home .first-2 {
     background-color: rgba(217,214,209,.9);
@@ -113,7 +114,7 @@ a { color: inherit; /* blue colors for links too */ text-decoration: inherit; /*
 
 .banner-image {top: 0;width: 1500px;margin: 0 auto;	height: 670px;z-index: -2;}
 .banner-image div {width: 100%;height: 100%;background-image: url('../images/denman-home.jpg.webp');background-repeat: no-repeat;background-size: cover;}
-.home .first {background-color: rgba(217,214,209,0.9);margin-left: 890px;width: 320px;padding: 0;border-radius: 5px;}
+.home .first {background-color: rgba(217,214,209,0.9);left: 340px;width: 320px;padding: 0;border-radius: 5px;}
 .home .first a {margin-top: 1em;display: block;color: #000000;}
 .home .first h6 {font-size: 16px;font-weight: 700;background-image: url('../images/Button.png');height: 41px;width: 226px;padding: 20px 20px 20px 0px;display: inline-block;text-align: center;
 	vertical-align: top;}
@@ -366,9 +367,6 @@ footer {margin-top: 4em;}
 .footer-2 p {text-align: center;color: #745E56;margin: 0;font-size: 12px;}
 
 @media (min-width: 1501px) and (max-width: 2000px) {
-    .home .first {
-        margin-left: 1110px;
-    }
     .home .first-2 {
     background-color: rgba(217,214,209,.9);
     left: 310px;
@@ -402,7 +400,6 @@ footer {margin-top: 4em;}
 }
 
 @media (min-width: 1201px) and (max-width: 1500px) {
-	.home .first { margin-left: 820px;margin-top:120px;}
 	.banner-image {	width: 100%;height: 150px;}
 	.home .first-2 {
     background-color: rgba(217,214,209,.9);
@@ -439,7 +436,6 @@ footer {margin-top: 4em;}
 
 
 @media (min-width: 1200px) {
- .home .first {margin-left:1135px;}
  .desktop-header-top div {width: 1200px;}
  .page-id-22 .content {	width: 800px;}
  .page-id-22 .content.patient-firstrow {width: 950px;}
@@ -449,7 +445,7 @@ footer {margin-top: 4em;}
 
 @media (min-width: 1025px) and (max-width: 1200px) {
     .desktop-header-top div {width: 992px;}
- .home .first {margin-left: 610px;}
+ .home .first {left: 260px;}
  .home .second {width: 700px;}
  .home .third {width: 840px;}
  .home .third img {height: 400px;}
@@ -498,7 +494,7 @@ footer {margin-top: 4em;}
 
 @media (min-width: 991px) and (max-width: 1024px) {	
  .desktop-header-top div {width: 992px;}
- .home .first {margin-left: 590px; margin-top:120px;}
+ .home .first {left: 260px;}
  .home .second {width: 700px;}
  .home .third {width: 840px;}
  .home .third img {height: 400px;}
@@ -550,7 +546,7 @@ footer {margin-top: 4em;}
 @media (min-width: 768px) and (max-width: 991px) {
 	.page-id-24 .content, .page-id-18 .content, .page-id-302 .content {width: 668px;padding: 100px;}	
 	.banner-image {width: 100%;	height: 100px;}
-	.home .first {margin-left: 440px;margin-top:120px;}
+	.home .first {left: 210px;}
 	.home .second {width: 600px;}
 	.home .third {width: 740px;	}
 	.home .third img {height: 350px;}
